Fixed cropped background image

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,8 @@
 
 body {
   background-image: url(assets/img/background_image.jpg);
+  background-attachment: fixed;
+  background-size: cover;
   margin: 0;
 }
 
